# byk-py-plugins

./: .byk.json  .gitignore  README.md  app.py
byk-ai/: pyproject.toml
byk-ai/src/bykai/: cli.py  main.py
byk-dy/: pyproject.toml
byk-dy/src/bykdy/: __init__.py  base_crawler.py  cli.py  main.py
byk-dy/src/bykdy/douyin/: crawler.py  models.py  utils.py
byk-hello/: pyproject.toml
byk-hello/hello/: byk.py  cli.py  main.py
byk-jiahao/: pyproject.toml
byk-jiahao/jiahao/: byk.py  cli.py
byk-lansend/: README.md  alias.byk.json  pyproject.toml
byk-lansend/src/byklansend/: app.py  bootstrap.py  main.py
byk-lansend/src/byklansend/cli/: launcher.py  ui.py  validators.py
byk-lansend/src/byklansend/features/chat/: controller.py  service.py
byk-lansend/src/byklansend/features/files/: controller.py  service.py
byk-lansend/src/byklansend/features/speedtest/: controller.py
byk-lansend/src/byklansend/features/upload/: controller.py  service.py
byk-lansend/web-ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
byk-lansend/web-ui/src/: App.tsx  AppContent.tsx  api.ts  constants.ts  index.css  types.ts
byk-lansend/web-ui/src/components/: BreadcrumbNav.tsx  ChatTab.tsx  ErrorBoundary.tsx  FileList.tsx  FileListItem.tsx  PreviewTab.tsx  RepoTreeIcon.tsx  ResizeHandle.tsx  SelectionBar.tsx  SpeedTestPopup.tsx  TabBar.tsx  UploadDetailsTab.tsx  UploadGroups.tsx
byk-lansend/web-ui/src/contexts/: DirectoryContext.tsx  PreviewContext.tsx  SelectionContext.tsx  SpeedContext.tsx  UploadContext.tsx  index.tsx
byk-lansend/web-ui/src/hooks/: useDragAndDrop.ts  useLansendDirectory.ts  useLansendPreview.ts  useLansendSpeed.ts  useLansendUpload.ts  usePasswordShake.ts  useSelection.ts  useUploadTaskGroups.ts  useWindowResize.ts
byk-lansend/web-ui/src/utils/: chat.ts  files.ts  format.ts  time.ts
byk-pick/: pyproject.toml
byk-pick/src/bykpick/: cli.py  controller.py  main.py  utils.py  web.py
byk-pick/web-ui/: pnpm-lock.yaml
byk-slide/: .byk.json  README.md  pyproject.toml
byk-slide/src/bykslide/: cli.py  controller.py  main.py  utils.py  web.py
byk-slide/web-ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
byk-slide/web-ui/src/components/: LoginView.vue
bykpy/: README.md  pyproject.toml
bykpy/src/bykpy/: __init__.py  __main__.py  app.py  runtime.py
bykpy/src/bykpy/api/: __init__.py  cli.py  context.py  network.py  web.py
bykpy/src/bykpy/core/: __init__.py  context.py  persistence.py  plugin.py  state.py
bykpy/src/bykpy/infra/: cache.py  logging.py  persistence.py  registry.py  state.py  view.py
bykpy/tests/: __init__.py  conftest.py  test_cli.py  test_network.py  test_persistence.py  test_state.py  test_view.py  test_web.py
docs/: package.json  rspress.config.ts
docs/content/: _meta.json  index.mdx
docs/content/api/: _meta.json  cli.mdx  context.mdx  network.mdx  store.mdx  web.mdx
docs/styles/: custom.css
docs/theme/: index.css
