[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "byk-ai"
version = "0.3.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "fcbyk", email = "731240932@qq.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "bykpy>=0.1.0,<1.0.0",
    "openai>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
byk=[
    "byk>=0.1.0,<1.0.0",
]

[project.entry-points."byk.plugins"]
byk-ai = "bykai.main:Plugin"

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"], include = ["bykai*"] } }
