[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "byk-slide"
version = "2026.6.6"
description = "A byk plugin for controlling PPT slides from a mobile browser."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "fcbyk", email = "731240932@qq.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "bykpy>=0.1.0,<1.0.0",
    "click>=8.0.0",
    "flask>=2.0",
    "pyperclip>=1.9.0,<2.0.0",
    "flask-socketio==5.3.3",
    "python-socketio==5.9.0",
    "pyautogui>=0.9.50,<1.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
byk=[
    "byk>=0.1.0,<1.0.0",
]

[project.entry-points."bykpy.plugins"]
byk-slide = "bykslide.main:Plugin"

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"], include = ["bykslide*"] } }

[tool.setuptools.package-data]
bykslide = ["dist/**/*"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
tag_format = "v$version"
changelog_file = "CHANGELOG.md"
bump_message = "release: v$new_version"
version_files = [
    "pyproject.toml:version ="
]
